--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-12  Michael Collison  <michael.collison@arm.com>
+
+	* gcc.dg/zero_bits_compound-2.c: Fix test for aarch64.
+
 2017-01-11  Julia Koval  <julia.koval@intel.com>
 	    Uros Bizjak  <ubizjak@gmail.com>
 
