2017-01-12  Richard Biener  <rguenther@suse.de>
	* tree-pretty-print.c (dump_generic_node): Provide -gimple
	variant for MEM_REF.  Sanitize INTEGER_CST for -gimple.

	c/
	* gimple-parser.c (c_parser_gimple_postfix_expression): Parse
	__MEM.

	* gcc.dg/gimplefe-21.c: New testcase.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244350 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-12  Richard Biener  <rguenther@suse.de>
 
+	* tree-pretty-print.c (dump_generic_node): Provide -gimple
+	variant for MEM_REF.  Sanitize INTEGER_CST for -gimple.
+
+2017-01-12  Richard Biener  <rguenther@suse.de>
+
 	* tree.c (initialize_tree_contains_struct): Make TS_OPTIMIZATION
 	and TS_TARGET_OPTION directly derive from TS_BASE.
 	* tree-core.h (tree_optimization_option): Derive from tree_base.
