--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-12  Richard Biener  <rguenther@suse.de>
+
+	* gcc.dg/gimplefe-21.c: New testcase.
+
 2017-01-12  Michael Collison  <michael.collison@arm.com>
 
 	* gcc.dg/zero_bits_compound-2.c: Fix test for aarch64.
