--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-12  Justin Squirek  <squirek@adacore.com>
+
+	* sem_prag.adb (Analyze_Pragma): Add appropriate calls to
+	Resolve_Suppressible in the pragma Assertion_Policy case.
+	(Resolve_Suppressible): Created this function to factor out
+	common code used to resolve Suppress to either Ignore or Check
+	* snames.ads-tmpl: Add name for Suppressible.
+
 2017-01-12  Gary Dismukes  <dismukes@adacore.com>
 
 	* exp_ch9.adb, s-secsta.adb, snames.ads-tmpl, exp_ch3.adb: Minor
