2017-01-12  Gary Dismukes  <dismukes@adacore.com>
	* sem_prag.adb: Minor reformatting.
	* sem_util.adb (Unique_Entity): fix result for
	bodies of entry families.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244363 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-12  Gary Dismukes  <dismukes@adacore.com>
+
+	* sem_prag.adb: Minor reformatting.
+	* sem_util.adb (Unique_Entity): fix result for
+	bodies of entry families.
+
 2017-01-12  Justin Squirek  <squirek@adacore.com>
 
 	* sem_prag.adb (Analyze_Pragma): Add appropriate calls to
