Add Cortex-A15 tuning to gcc.dg/uninit-pred-8_a.c
	PR tree-optimization/78319
	* gcc.dg/uninit-pred-8_a.c: Add -mtune=cortex-a15 for arm.
	Remove xfail.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244372 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-12  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	PR tree-optimization/78319
+	* gcc.dg/uninit-pred-8_a.c: Add -mtune=cortex-a15 for arm.
+	Remove xfail.
+
 2017-01-12  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	PR target/79044
