* gcc.target/i386/builtin_target.c (check_features): Check all 	supported __builtin_cpu_supports options.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244375 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-12  Uros Bizjak  <ubizjak@gmail.com>
+
+	* gcc.target/i386/builtin_target.c (check_features): Check all
+	supported __builtin_cpu_supports options.
+
 2017-01-12  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	PR tree-optimization/78319
