PR testsuite/79073 - FAIL: gcc.dg/pr78973.c (test for warnings, line 12) in ILP32
gcc/testsuite/ChangeLog:
	* gcc.dg/pr78973.c: Xfail on ILP32 targets.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244377 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-12  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/79073
+	* gcc.dg/pr78973.c: Xfail on ILP32 targets.
+
 2017-01-12  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc.target/i386/builtin_target.c (check_features): Check all
