PR testsuite/791051 - FAIL: gcc.dg/attr-alloc_size-4.c (test for warnings, line 140)
gcc/testsuite/ChangeLog:
	* gcc.dg/attr-alloc_size-4.c: Avoid false negatives due to bug 79054.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244380 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-12  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/791051
+	* gcc.dg/attr-alloc_size-4.c: Avoid false negatives due to bug 79054.
+
 2017-01-12  David Edelsohn  <dje.gcc@gmail.com>
 
 	* gcc.dg/pr78768.c: Require LTO.
