PR bootstrap/79069 	* cfgrtl.c (rtl_tidy_fallthru_edge): For any_uncondjump_p that can't 	be removed due to side-effects, don't remove following barrier nor 	turn the successor edge into fallthru edge.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244383 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/79069
+	* cfgrtl.c (rtl_tidy_fallthru_edge): For any_uncondjump_p that can't
+	be removed due to side-effects, don't remove following barrier nor
+	turn the successor edge into fallthru edge.
+
 2017-01-12  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	PR target/79044
